完成  加入预览图

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <div id="content">
         <div id="logo"></div>
         <div class="box contain" id="login">
-            <form id="fm1" action="/" method="post">
+            <form id="fm1" action="/backend/employee/verify" method="post">
                 <section class="row">
                     <label for="username"></label>
                     <input id="username" name="username" class="required" tabindex="1" placeholder="用户名" type="text" value="" size="25"/>
